infra/k8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-node-port-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
